# quant_lab

./: .env.example  .gitignore  LICENSE  Makefile  README.md  apply_fixes.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.ruff_cache/0.15.0/: 2313830848890132838  6261464897583168724
data/processed/: backtest_results.csv
docs/: ASSET_PRICING_UPGRADE.md  CONTRIBUTING.md  INSTALL.md  METHODOLOGY.md  index.md
notebooks/: 01_alpha_research.ipynb  02_risk_engine.ipynb  03_lob_execution.ipynb
notebooks/data/processed/: backtest_results_interactive.csv  execution_results_interactive.csv  impact_analysis_interactive.csv  risk_results_interactive.csv
scripts/: generate_visualizations.py  run_backtest.py  run_execution_study.py  run_fama_macbeth.py  run_risk.py  run_shrinkage_study.py
src/quantlab/: __init__.py
src/quantlab/alpha/: __init__.py  backtest.py  diagnostics.py  evaluation.py  factors.py  fama_macbeth.py  ic.py  neutralization.py  portfolio.py  regime.py  statistics.py
src/quantlab/config/: __init__.py  logging.py  settings.py
src/quantlab/data/: __init__.py  cleaners.py  loaders.py  polygon_client.py  universe.py
src/quantlab/execution/: __init__.py  shortfall.py  strategies.py
src/quantlab/microstructure/: __init__.py  impact.py  lob.py  regression.py  signals.py
src/quantlab/risk/: __init__.py  backtest.py  distributions.py  es.py  evt.py  factor_risk.py  garch.py  shrinkage.py  stress.py  var.py
src/quantlab/viz/: __init__.py
tests/: __init__.py  conftest.py  test_fama_macbeth.py  test_microstructure.py  test_quant_correctness.py  test_quant_credibility.py  test_sample.py  test_shrinkage.py
