[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab"
version = "0.2.0"
description = "Production-grade quantitative research platform: multi-factor alpha, fat-tail risk modeling, and market microstructure analysis"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    { name = "Soumadeep Maiti", email = "maitisoumadeep@gmail.com" }
]
keywords = ["quantitative-finance", "alpha-research", "risk-management", "market-microstructure", "execution", "lob"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "yfinance>=0.2.0",
    "arch>=6.0.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=14.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "nbformat>=5.9.0",
    "ipywidgets>=8.1.0",
    "ipykernel>=6.25.0",
]

polygon = [
    "polygon-api-client>=1.12.0",
]

all = [
    "quantlab[dev,notebooks,polygon]",
]

[project.urls]
Homepage = "https://github.com/soumadeepmaiti/quant_lab"
Documentation = "https://github.com/soumadeepmaiti/quant_lab/tree/main/docs"
Repository = "https://github.com/soumadeepmaiti/quant_lab"
Issues = "https://github.com/soumadeepmaiti/quant_lab/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantlab*"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
) /
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
